--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -1,13 +1,13 @@
-<div style="background-color: rgb(47, 84, 150); color: #fff; text-align: center;">外部サービスリンク</div>
-  <div id="shortcut-app-grid">
-    <div class="grid-item">
-      <div>
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png">
-      </div>
-      <div class="shortcut-app-caption">
-        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" style="font-weight: bold;">Gmail</a>
-      </div>
+<div class="shortcut-app-header">外部サービスリンク</div>
+<div id="shortcut-app-grid">
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png">
     </div>
+    <div class="shortcut-app-caption">
+      <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" style="font-weight: bold;">Gmail</a>
+    </div>
+  </div>
   <div class="grid-item">
     <div>
       <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/kinkakuji_logo.png?r=true&id=154255&hash=01613&.png">
