--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -42,3 +42,48 @@
     </div>
   </div>
 </div>
+<!--  -->
+<div class="shortcut-app-header">kintoneアプリ</div>
+<div id="shortcut-kintone-app-grid">
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" style="font-weight: bold;">Gmail</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/kinkakuji_logo.png?r=true&id=154255&hash=01613&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold;">勤革時</a><br>
+      <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold; font-size: 10px;">&#10697;Manual</a><br>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/chatwork-logo.png?r=true&id=154254&hash=A6196&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://www.chatwork.com/" target="_blank" style="font-weight: bold;">Chatwork</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/trustlogin_logo.png?r=true&id=154256&hash=57028&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://portal.trustlogin.com/user/" target="_blank" style="font-weight: bold;">Trust Login</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/zaiseki-list_logo.png?r=true&id=154257&hash=BDA28&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://docs.google.com/spreadsheets/d/124TLY6dZhktU2W_9DOfkg5YzWgqNAGiygNAsfXJWYCU/edit#gid=1693739987" target="_blank" style="font-weight: bold;">在籍表</a>
+    </div>
+  </div>
+</div>
