--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -1,5 +1,5 @@
 <div class="shortcut-app-header">外部サービスリンク</div>
-<div id="shortcut-app-grid">
+<div id="shortcut-app-grid" style="margin-bottom: 10px;">
   <div class="grid-item">
     <div>
       <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png">
