--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -47,43 +47,26 @@
 <div id="shortcut-kintone-app-grid">
   <div class="grid-item">
     <div>
-      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png">
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/8764_%E3%82%BF%E3%82%B9%E3%82%AF%E3%83%88%E3%83%AC%E3%82%A42y.png?r=true&id=154429&hash=6E415&.png">
     </div>
     <div class="shortcut-app-caption">
-      <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" style="font-weight: bold;">Gmail</a>
+      <a href="https://wise-kansai.cybozu.com/k/20/" target="_blank" style="font-weight: bold;">各種申請</a>
     </div>
   </div>
   <div class="grid-item">
     <div>
-      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/kinkakuji_logo.png?r=true&id=154255&hash=01613&.png">
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/86_icon_%E8%A8%BC%E6%86%91%E4%BF%9D%E7%AE%A1%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.png?r=true&id=154427&hash=870A3&.png">
     </div>
     <div class="shortcut-app-caption">
-      <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold;">勤革時</a><br>
-      <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold; font-size: 10px;">&#10697;Manual</a><br>
+      <a href="https://wise-kansai.cybozu.com/k/86/" target="_blank" style="font-weight: bold;">証憑保管・送付<br>経費支払依頼伝票</a>
     </div>
   </div>
   <div class="grid-item">
     <div>
-      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/chatwork-logo.png?r=true&id=154254&hash=A6196&.png">
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/199_icon_%E3%82%B9%E3%82%BF%E3%83%83%E3%83%95%E5%85%A5%E9%80%80%E7%A4%BE%E8%A1%A8.png?r=true&id=154428&hash=2A1C8&.png">
     </div>
     <div class="shortcut-app-caption">
-      <a href="https://www.chatwork.com/" target="_blank" style="font-weight: bold;">Chatwork</a>
-    </div>
-  </div>
-  <div class="grid-item">
-    <div>
-      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/trustlogin_logo.png?r=true&id=154256&hash=57028&.png">
-    </div>
-    <div class="shortcut-app-caption">
-      <a href="https://portal.trustlogin.com/user/" target="_blank" style="font-weight: bold;">Trust Login</a>
-    </div>
-  </div>
-  <div class="grid-item">
-    <div>
-      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/zaiseki-list_logo.png?r=true&id=154257&hash=BDA28&.png">
-    </div>
-    <div class="shortcut-app-caption">
-      <a href="https://docs.google.com/spreadsheets/d/124TLY6dZhktU2W_9DOfkg5YzWgqNAGiygNAsfXJWYCU/edit#gid=1693739987" target="_blank" style="font-weight: bold;">在籍表</a>
+      <a href="https://wise-kansai.cybozu.com/k/199/" target="_blank" style="font-weight: bold;">入退社表</a>
     </div>
   </div>
 </div>
