--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -58,7 +58,7 @@
       <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/86_icon_%E8%A8%BC%E6%86%91%E4%BF%9D%E7%AE%A1%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.png?r=true&id=154427&hash=870A3&.png">
     </div>
     <div class="shortcut-app-caption">
-      <a href="https://wise-kansai.cybozu.com/k/86/" target="_blank" style="font-weight: bold;">証憑保管・送付<br>経費支払依頼伝票</a>
+      <a href="https://wise-kansai.cybozu.com/k/86/" target="_blank" style="font-weight: bold;">証憑保管・送付／経費支払依頼伝票</a>
     </div>
   </div>
   <div class="grid-item">
