--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -69,4 +69,28 @@
       <a href="https://wise-kansai.cybozu.com/k/199/" target="_blank" style="font-weight: bold;">入退社表</a>
     </div>
   </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/applicant.png?id=154431&hash=80647&w=100&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/21/" target="_blank" style="font-weight: bold;">応募受付簿</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/staff-master.png?id=154433&hash=5BA82&w=100&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/24/" target="_blank" style="font-weight: bold;">スタッフマスタ</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/customer-master.png?id=154432&hash=55A9C&w=100&.png">
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/29/" target="_blank" style="font-weight: bold;">顧客事業所マスタ</a>
+    </div>
+  </div>
 </div>
