--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -18,7 +18,7 @@
     </div>
     <div class="shortcut-app-caption">
       <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold;">勤革時</a><br>
-      <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold; font-size: 10px;">&#10697;Manual</a><br>
+      <a href="https://docs.google.com/presentation/d/16htpeAVhQXDyj2BM7hHqsppdy_x9Dh1Gm8z6Hiwyyg8/edit?usp=sharing" target="_blank" style="font-weight: bold; font-size: 10px;">&#10697;Manual</a><br>
     </div>
   </div>
   <div class="grid-item">
