--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -115,4 +115,24 @@
       <a href="https://wise-kansai.cybozu.com/k/29/" target="_blank" style="font-weight: bold;">顧客事業所マスタ</a>
     </div>
   </div>
+  <div class="grid-item">
+    <div>
+      <a href="https://wise-kansai.cybozu.com/k/301/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/301_%E5%B8%9D%E5%9B%BDDB%E4%BC%81%E6%A5%AD%E3%82%A2%E3%82%BF%E3%83%83%E3%82%AF%E3%83%AA%E3%82%B9%E3%83%88.png?hash=0635E&w=100&id=156706&.png">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/301/" target="_blank" style="font-weight: bold;">帝国DB企業アタックリスト</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <a href="https://wise-kansai.cybozu.com/k/302/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/302_%E5%96%B6%E6%A5%AD%E6%B4%BB%E5%8B%95%E5%B1%A5%E6%AD%B4.png?hash=70951&w=100&id=156707&.png">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/302/" target="_blank" style="font-weight: bold;">帝国DB企業アタックリスト</a>
+    </div>
+  </div>
 </div>
