--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -132,7 +132,7 @@
       </a>
     </div>
     <div class="shortcut-app-caption">
-      <a href="https://wise-kansai.cybozu.com/k/302/" target="_blank" style="font-weight: bold;">帝国DB企業アタックリスト</a>
+      <a href="https://wise-kansai.cybozu.com/k/302/" target="_blank" style="font-weight: bold;">営業活動履歴</a>
     </div>
   </div>
 </div>
