add: アプリ追加

--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -52,6 +52,16 @@
     </div>
   </div>
 </div>
+<div class="grid-item">
+    <div>
+      <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/google-cal-icon.png?hash=DB79E&w=100&id=207605&.png">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" target="_blank" style="font-weight: bold;">Google<br>カレンダー</a>
+    </div>
+  </div>
 <!--  -->
 <div class="shortcut-app-header">kintoneアプリ</div>
 <div id="shortcut-kintone-app-grid">
@@ -133,6 +143,26 @@
     </div>
     <div class="shortcut-app-caption">
       <a href="https://wise-kansai.cybozu.com/k/302/" target="_blank" style="font-weight: bold;">営業活動履歴</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <a href="https://wise-kansai.cybozu.com/k/191/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/icon.png?hash=8D1F3&w=100&id=207573&.png">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/191/" target="_blank" style="font-weight: bold;">日報</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <a href="https://wise-kansai.cybozu.com/k/191/?view=8231967" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/icon%20%281%29.png?hash=00516&w=100&id=207574&.png">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/191/?view=8231967" target="_blank" style="font-weight: bold;">行き先ボード</a>
     </div>
   </div>
 </div>
