fix: iconのリンク先を修正しました
- 日報と行き先ボードのアイコンを修正

--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -148,7 +148,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/191/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/icon.png?hash=8D1F3&w=100&id=207573&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_daily-report.png?hash=39CC3&w=100&id=208026&.png">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -158,7 +158,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/191/?view=8231967" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/icon%20%281%29.png?hash=00516&w=100&id=207574&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_board.png?hash=DF7A4&w=100&id=208027&.png">
       </a>
     </div>
     <div class="shortcut-app-caption">
