add: 会議室予約状況のアプリショートカットを追加しました
- Portal
  - 会議室予約状況アプリへのショートカットアイコンを追加

--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -3,7 +3,7 @@
   <div class="grid-item">
     <div>
       <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/gmail_logo.png?r=true&id=154253&hash=1B8E1&.png" alt="Gmail">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -13,7 +13,7 @@
   <div class="grid-item">
     <div>
       <a href="https://nec.kingtime.jp/independent/recorder2/personal/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/kinkakuji_logo.png?r=true&id=154255&hash=01613&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/kinkakuji_logo.png?r=true&id=154255&hash=01613&.png" alt="勤革時">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -24,7 +24,7 @@
   <div class="grid-item">
     <div>
       <a href="https://www.chatwork.com/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/chatwork-logo.png?r=true&id=154254&hash=A6196&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/chatwork-logo.png?r=true&id=154254&hash=A6196&.png" alt="Chatwork">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -34,7 +34,7 @@
   <div class="grid-item">
     <div>
       <a href="https://portal.trustlogin.com/user/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/trustlogin_logo.png?r=true&id=154256&hash=57028&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/trustlogin_logo.png?r=true&id=154256&hash=57028&.png" alt="Trust Login">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -44,7 +44,7 @@
   <div class="grid-item">
     <div>
       <a href="https://docs.google.com/spreadsheets/d/124TLY6dZhktU2W_9DOfkg5YzWgqNAGiygNAsfXJWYCU/edit#gid=1693739987" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/zaiseki-list_logo.png?r=true&id=154257&hash=BDA28&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/zaiseki-list_logo.png?r=true&id=154257&hash=BDA28&.png" alt="在籍表">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -54,7 +54,7 @@
   <div class="grid-item">
     <div>
       <a href="https://calendar.google.com/calendar/u/0/r?tab=rc" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/google-cal-icon.png?hash=DB79E&w=100&id=207605&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/google-cal-icon.png?hash=DB79E&w=100&id=207605&.png" alt="Googleカレンダー">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -68,7 +68,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/20/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/8764_%E3%82%BF%E3%82%B9%E3%82%AF%E3%83%88%E3%83%AC%E3%82%A42y.png?r=true&id=154429&hash=6E415&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/8764_%E3%82%BF%E3%82%B9%E3%82%AF%E3%83%88%E3%83%AC%E3%82%A42y.png?r=true&id=154429&hash=6E415&.png" alt="各種申請">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -78,7 +78,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/86/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/86_icon_%E8%A8%BC%E6%86%91%E4%BF%9D%E7%AE%A1%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.png?r=true&id=154427&hash=870A3&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/86_icon_%E8%A8%BC%E6%86%91%E4%BF%9D%E7%AE%A1%E3%82%A2%E3%83%95%E3%82%9A%E3%83%AA.png?r=true&id=154427&hash=870A3&.png" alt="証憑保管・送付／経費支払依頼伝票">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -88,7 +88,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/199/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/199_icon_%E3%82%B9%E3%82%BF%E3%83%83%E3%83%95%E5%85%A5%E9%80%80%E7%A4%BE%E8%A1%A8.png?r=true&id=154428&hash=2A1C8&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/199_icon_%E3%82%B9%E3%82%BF%E3%83%83%E3%83%95%E5%85%A5%E9%80%80%E7%A4%BE%E8%A1%A8.png?r=true&id=154428&hash=2A1C8&.png" alt="入退社表">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -98,7 +98,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/21/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/applicant.png?id=154431&hash=80647&w=100&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/applicant.png?id=154431&hash=80647&w=100&.png" alt="応募受付簿">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -107,9 +107,9 @@
   </div>
   <div class="grid-item">
     <div>
-       <a href="https://wise-kansai.cybozu.com/k/24/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/staff-master.png?id=154433&hash=5BA82&w=100&.png">
-       </a>
+      <a href="https://wise-kansai.cybozu.com/k/24/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/staff-master.png?id=154433&hash=5BA82&w=100&.png" alt="スタッフマスタ">
+      </a>
     </div>
     <div class="shortcut-app-caption">
       <a href="https://wise-kansai.cybozu.com/k/24/" target="_blank" style="font-weight: bold;">スタッフマスタ</a>
@@ -118,7 +118,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/29/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/customer-master.png?id=154432&hash=55A9C&w=100&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/customer-master.png?id=154432&hash=55A9C&w=100&.png" alt="顧客事業所マスタ">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -128,17 +128,17 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/301/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/301_%E5%B8%9D%E5%9B%BDDB%E4%BC%81%E6%A5%AD%E3%82%A2%E3%82%BF%E3%83%83%E3%82%AF%E3%83%AA%E3%82%B9%E3%83%88.png?hash=0635E&w=100&id=156706&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/301_%E5%B8%9D%E5%9B%BDDB%E4%BC%81%E6%A5%AD%E3%82%A2%E3%82%BF%E3%83%83%E3%82%AF%E3%83%AA%E3%82%B9%E3%83%88.png?hash=0635E&w=100&id=156706&.png" alt="帝国DB企業アタックリスト"">
       </a>
     </div>
-    <div class="shortcut-app-caption">
-      <a href="https://wise-kansai.cybozu.com/k/301/" target="_blank" style="font-weight: bold;">帝国DB企業アタックリスト</a>
+    <div class=" shortcut-app-caption">
+        <a href="https://wise-kansai.cybozu.com/k/301/" target="_blank" style="font-weight: bold;">帝国DB企業アタックリスト</a>
     </div>
   </div>
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/302/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/302_%E5%96%B6%E6%A5%AD%E6%B4%BB%E5%8B%95%E5%B1%A5%E6%AD%B4.png?hash=70951&w=100&id=156707&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/302_%E5%96%B6%E6%A5%AD%E6%B4%BB%E5%8B%95%E5%B1%A5%E6%AD%B4.png?hash=70951&w=100&id=156707&.png" alt="営業活動履歴">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -148,7 +148,7 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/191/" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_daily-report.png?hash=39CC3&w=100&id=208026&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_daily-report.png?hash=39CC3&w=100&id=208026&.png" alt="日報">
       </a>
     </div>
     <div class="shortcut-app-caption">
@@ -158,11 +158,21 @@
   <div class="grid-item">
     <div>
       <a href="https://wise-kansai.cybozu.com/k/191/?view=8231967" target="_blank" style="font-weight: bold;">
-        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_board.png?hash=DF7A4&w=100&id=208027&.png">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_board.png?hash=DF7A4&w=100&id=208027&.png" alt="行き先ボード">
       </a>
     </div>
     <div class="shortcut-app-caption">
       <a href="https://wise-kansai.cybozu.com/k/191/?view=8231967" target="_blank" style="font-weight: bold;">行き先ボード</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
+      <a href="https://wise-kansai.cybozu.com/k/394/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/394_icon_%E4%BC%9A%E8%AD%B0%E5%AE%A4%E4%BA%88%E7%B4%84%E7%8A%B6%E6%B3%81.png?hash=4B736&id=218792&.png" alt="会議室予約状況">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/394/" target="_blank" style="font-weight: bold;">会議室予約状況</a>
     </div>
   </div>
 </div>
