--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -175,4 +175,14 @@
       <a href="https://wise-kansai.cybozu.com/k/394/" target="_blank" style="font-weight: bold;">会議室予約状況</a>
     </div>
   </div>
+  <div class="grid-item">
+    <div>
+      <a href="https://wise-kansai.cybozu.com/k/55/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/55_icon_%E9%9B%86%E8%A8%88-%E5%A3%B2%E4%B8%8A%E9%80%9F%E5%A0%B1.png?hash=265CB&id=232491&.png" alt="【集計】売上速報">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/55/" target="_blank" style="font-weight: bold;">【集計】売上速報</a>
+    </div>
+  </div>
 </div>
