add: ポータルに営業活動履歴(Job Magic)のアイコンを追加
- Portal
  - アイコンを追加しました

--- a/kintone/portal/html/portal_renewal_2024.html
+++ b/kintone/portal/html/portal_renewal_2024.html
@@ -147,6 +147,16 @@
   </div>
   <div class="grid-item">
     <div>
+      <a href="https://wise-kansai.cybozu.com/k/405/" target="_blank" style="font-weight: bold;">
+        <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/do…5%E6%AD%B4_jobmagic.png?hash=BDB15&id=234012&.png" alt="営業活動履歴(Job Magic)">
+      </a>
+    </div>
+    <div class="shortcut-app-caption">
+      <a href="https://wise-kansai.cybozu.com/k/405/" target="_blank" style="font-weight: bold;">営業活動履歴(Job Magic)</a>
+    </div>
+  </div>
+  <div class="grid-item">
+    <div>
       <a href="https://wise-kansai.cybozu.com/k/191/" target="_blank" style="font-weight: bold;">
         <img class="shortcut-app-image" src="https://wise-kansai.cybozu.com/k/api/space/blob/download.do/-/191_icon_daily-report.png?hash=39CC3&w=100&id=208026&.png" alt="日報">
       </a>
